[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-cli-group1"
version = "0.36.0"

[lib]
name = "spk_cli_group1"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive", "env"] }
colored = "2.0.0"
futures = "0.3.9"
itertools = "0.10"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.57"
serde_yaml = "0.8.17"
spfs = { version = '0.34.6', path = "../spfs" }
spk-cli-common = { path = '../spk-cli-common' }
spk-foundation = { path = '../spk-foundation' }
spk-ident = { path = '../spk-ident' }
spk-name = { path = '../spk-name' }
spk-solver = { path = '../spk-solver' }
spk-solver-solution = { path = '../spk-solver-solution' }
spk-spec = { path = '../spk-spec' }
spk-storage = { path = '../spk-storage' }
tokio = { version = "1.20", features = ["rt"] }
tracing = "0.1.35"

[dev-dependencies]
rstest = "0.15.0"