[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-cmd-convert"
version = "0.36.0"

[lib]
name = "spk_cmd_convert"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive", "env"] }
spk-cli-common = { path = '../spk-cli-common' }
spk-cmd-env = { path = "../spk-cmd-env" }