[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-cmd-make-binary"
version = "0.36.0"

[lib]
name = "spk_cmd_make_binary"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive", "env"] }
futures = "0.3.9"
spk-build = { path = '../spk-build' }
spk-cli-common = { path = '../spk-cli-common' }
spk-format = { path = '../spk-format' }
spk-foundation = { path = '../spk-foundation' }
spk-ident = { path = '../spk-ident' }
spk-option-map = { path = '../spk-option-map' }
spk-spec = { path = '../spk-spec' }
spk-storage = { path = '../spk-storage' }
spk-validators = { path = '../spk-validators' }
tokio = { version = "1.20", features = ["rt"] }
tracing = "0.1.35"