[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-cmd-make-source"
version = "0.36.0"

[lib]
name = "spk_cmd_make_source"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive", "env"] }
spk-build = { path = '../spk-build' }
spk-cli-common = { path = '../spk-cli-common' }
spk-format = { path = '../spk-format' }
spk-foundation = { path = '../spk-foundation' }
spk-ident = { path = '../spk-ident' }
spk-spec = { path = '../spk-spec' }
spk-storage = { path = '../spk-storage' }
tracing = "0.1.35"