[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-cmd-repo"
version = "0.36.0"

[lib]
name = "spk_cmd_repo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive", "env"] }
spk-cli-common = { path = '../spk-cli-common' }
spk-storage = { path = '../spk-storage' }
tracing = "0.1.35"