[package]
authors = { workspace = true }
name = "spk-config"
edition = { workspace = true }
version = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = { workspace = true }

[lints]
workspace = true

[features]
statsd = ["dep:statsd"]

[dependencies]
config = { workspace = true }
dirs = { workspace = true }
miette = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spfs = { workspace = true }
statsd = { version = "0.15.0", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
whoami = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
