[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spk-exec"
version = { workspace = true }

[features]
migration-to-components = [
	"spk-schema/migration-to-components",
	"spk-storage/migration-to-components",
	"spk-solve/migration-to-components",
]

[dependencies]
async-stream = "0.3"
futures = { workspace = true }
relative-path = "1.3"
spfs = { version = '0.34.6', path = "../spfs" }
spk-schema = { path = '../spk-schema' }
spk-storage = { path = "../spk-storage" }
spk-solve = { path = "../spk-solve" }
thiserror = { workspace = true }
tracing = { workspace = true }
