[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spk-exec"
version = { workspace = true }

[lints]
workspace = true

[features]
migration-to-components = [
    "spk-schema/migration-to-components",
    "spk-storage/migration-to-components",
    "spk-solve/migration-to-components",
]

[dependencies]
async-stream = "0.3"
futures = { workspace = true }
relative-path = "1.3"
spfs = { workspace = true }
spk-schema = { workspace = true }
spk-storage = { workspace = true }
spk-solve = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
