[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-foundation"
version = "0.36.0"

[lib]
name = "spk_foundation"
path = "src/lib.rs"

[dependencies]
colored = "2.0"
data-encoding = "2.3"
enum_dispatch = "0.3.8"
ignore = "0.4.18"
itertools = "0.10"
nom = "7.1"
nom-supreme = "0.8"
relative-path = "1.3"
ring = "0.16.15"
rstest = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
spk-format = { path = "../spk-format" }
spk-name = { path = "../spk-name" }
spk-version = { path = "../spk-version" }
sys-info = "0.9.0"
tempfile = "3.3"
thiserror = "1.0"
tracing = "0.1.35"
tracing-subscriber = "0.2.16"

[dev-dependencies]
rstest = "0.15.0"