[package]
authors = { workspace = true }
edition = { workspace = true }
name = "spk-graph"
version = { workspace = true }
license-file = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = { workspace = true }

[lints]
workspace = true

[features]

[dependencies]
dot-writer = "0.1.2"
enum_dispatch = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
once_cell = { workspace = true }
petgraph = "0.8.2"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

spfs = { workspace = true }
spk-config = { workspace = true }
spk-schema = { workspace = true }
spk-storage = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
