[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-ident-component"
version = "0.36.0"

[lib]
name = "spk_ident_component"
path = "src/lib.rs"

[features]
migration-to-components = []

[dependencies]
colored = "2.0"
nom = "7.1"
nom-supreme = "0.8"
serde = { version = "1.0", features = ["derive"] }
spk-format = { path = "../spk-format" }
spk-name = { path = "../spk-name" }
thiserror = "1.0"

[dev-dependencies]
rstest = "0.15.0"
serde_yaml = "0.8.17"