[package]
authors = ["J Robert Ray <jrray@imageworks.com>"]
name = "spk-launcher"
version = "0.33.6"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
nix = { workspace = true }
spfs = { version = '0.34.6', path = "../spfs" }
tempfile = "3.3"
tokio = { workspace = true, features = ["rt"] }
