[package]
authors = { workspace = true }
name = "spk-launcher"
version = "0.33.6"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
nix = { workspace = true }
spfs = { path = "../spfs" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
