[package]
authors = ["Ryan Bottriell <rbottriell@imageworks.com>"]
edition = "2021"
name = "spk-name"
version = "0.36.0"

[lib]
name = "spk_name"
path = "src/lib.rs"

[dependencies]
paste = "1.0"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rstest = "0.15.0"